2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Clearly specify [Serializable] on 
	enums (self-test)

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: Renamed to NamespaceDefinition to better match Cecil
	names (and void confusing with common keyword).
	* OpCodeBitmask.cs: Add null checks in Equals(OpCodeBitmap) and
	UnionWith methods. Refactor Equals(object) wrt change.

2008-10-21  Cedric Vivier  <cedricv@neonux.com>

	* OpCodeBitmask.cs: Add public method UnionWith.
	Add FlowControlBranch and FlowControlReturn bitmasks.

2008-10-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: Add helper method to check for specialized namespaces.

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: New. Helper class so we can report defects against 
	namespaces just like any other metadata object.
	* OpCodeBitmask.cs: Implement IEquatable<T>.
	* StackEntryAnalysis.cs: Implement IEquatable<T> for StoreSlot and
	InstructionWithLeave inner structures.
	* StackEntryUsageResult.cs: Implement IEquatable<T>.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* MethodSignatures.cs: Prefer a const over a static readonly for the
	OperatorAttributes private field (self-test).
	* OpCodeBitmask.cs: Add a bitmask that cover all conversion (Conv_*)
	instructions.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* PrimitiveReferences.cs: New. Helper class to get, shared, 
	TypeReference of the primitive types of the framework (expend as
	needed).

2008-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* OpCodeBitmask.cs: Add IsSubsetOf method.

2008-09-18  Néstor Salceda  <nestor.salceda@gmail.com>

	* MethodSignatures.cs: Added a new method signature for the delegate
	Invoke method.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* OpCodeBitmask.cs: New. Specialized class to handle a bitmask on
	Cecil's Code enum (which is too large for Bitmask<T>).
